--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
+    "@vicons/ionicons5": "^0.12.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
+    "naive-ui": "^2.25.2",
     "sass": "^1.26.5",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "vfonts": "^0.0.3"
   }
 }
